Fix drop down menu spacing

--- a/src/components/DropDownList/dropDownList.css
+++ b/src/components/DropDownList/dropDownList.css
@@ -10,7 +10,7 @@
     min-width: 250px;
     border-radius: 5px;
     margin-left: 1rem;
-    top: 100%;
+    top: 40px;
     right: -9rem;
     background-color: var(--text-white);
     box-shadow: 0 16px 50px rgba(0, 0, 0, 0.07);
